@@ -7331,26 +7331,6 @@ The logical operators are the L<operators|/"Operator"> to perform logical operat
 
 The logical operators are the L<logical AND operator|/"Logical AND Operator">, the L<logical OR operator|/"Logical OR Operator">, and the L<logical NOT operator|/"Logical NOT Operator">.
 
-The logical operators can be the operands of only the following statements or operators.
-
-=over 2
-
-=item * the operand of the L<if or eslif statement|/"if Statement">
-
-=item * the operand of the L<unless statement|/"unless Statement">
-
-=item * the second operand of the L<for statement|/"for Statement">
-
-=item * the operand of the L<while statement|/"while Statement">
-
-=item * the left operand and the right operand of the L<logical AND operator|/"Logical AND Operator">
-
-=item * the left operand and the right operand of the L<logical OR operator|/"Logical OR Operator">
-
-=item * the operand of the L<logical NOT operator|/"Logical NOT Operator">
-
-=back
-
 =head3 Logical AND Operator
 
 The logical AND operator C<&&> is a L<logical operator|/"Logical Operator"> to perform a logical AND operation.
@@ -7359,12 +7339,11 @@ The logical AND operator C<&&> is a L<logical operator|/"Logical Operator"> to p
   
 The left operand and the right operand must be an L<operator|/"Operator">.
 
-The return type of logical AND operator is the L<int type|/"int Type">.
+The return type of the logical AND operator is the L<int type|/"int Type">.
 
-Thg logical AND operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the left operand. If the evaluated value is C<0>, the logical AND operator returns C<0>.
-If the value is C<1>, the right operand is evaluated.
+Thg logical AND operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the left operand. If the evaluated value is C<0>, return C<0>. Otherwise proceed to the evaluation of the right operand.
 
-And thg logical AND operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the right operand. If the evaluated value is C<0>, the logical AND operator returns C<0>. Otherwise returns C<1>.
+It performs the L<conditional type conversion|/"Conditional Type Conversion"> to the right operand. If the evaluated value is C<0>, return C<0>. Otherwise return the evaluated value.
 
 =head3 Logical OR Operator
 
@@ -7372,13 +7351,11 @@ The logical OR operator C<||> is a L<logical operator|/"Logical Operator"> to pe
 
   LEFT_OPERAND || RIGHT_OPERAND
 
-The left operand and the right operand must be an L<operator|/"Operator">.
+The return type of the logical OR operator is the L<int type|/"int Type">.
 
-The return type of logical OR operator is the L<int type|/"int Type">.
+Thg logical OR operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the left operand. If the evaluated value is not C<0>, return the evaluated value. Otherwise proceed to the evaluation of the right operand.
 
-Thg logical OR operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the left operand. If the evaluated value is C<1>, the logical OR operator returns C<1>. Otherwise the right operand is evaluated.
-
-And the L<conditional type conversion|/"Conditional Type Conversion"> is performed to the right operand. If the evaluated value is C<1>, the logical OR operator returns C<1>. Otherwise returns C<0>.
+It performs the L<conditional type conversion|/"Conditional Type Conversion"> to the right operand. If the evaluated value is not C<0>, return the evaluated value. Otherwise return C<0>.
 
 =head3 Logical NOT Operator
 
@@ -7386,11 +7363,9 @@ The logical NOT operator C<!> is a L<logical operator|/"Logical Operator"> to pe
 
   !OPERAND
 
-The operand must be a an L<operator|/"Operator">.
+The return type of the logical NOT operator is the L<int type|/"int Type">.
 
-The return type of logical NOT operator is the L<int type|/"int Type">.
-
-Thg logical NOT operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the operand. If the evaluated value is C<1>, the logical NOT operator returns C<0>. Otherwise returns C<1>.
+Thg logical NOT operator performs the L<conditional type conversion|/"Conditional Type Conversion"> to the operand. If the evaluated value is C<0>, returns C<1>. Otherwise return C<0>.
 
 =head2 String Concatenation Operator
 
